--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,6 +111,28 @@ dependencies {
     kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
+    // Hilt testing dependencies
+    androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
+    kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_version"
+
+    def mock_web_server_version = '4.8.1'
+    testImplementation "com.squareup.okhttp3:mockwebserver:$mock_web_server_version"
+
+    def archTestingVersion = '2.1.0'
+    testImplementation "androidx.arch.core:core-testing:$archTestingVersion"
+
+    def coroutinesTest = '1.3.8'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutinesTest"
+
+    def robolectricVersion = '4.3.1'
+    testImplementation "org.robolectric:robolectric:$robolectricVersion"
+
+    def androidXTestExtKotlinRunnerVersion = '1.1.1'
+    testImplementation "androidx.test.ext:junit-ktx:$androidXTestExtKotlinRunnerVersion"
+
+    def androidXTestCoreVersion = '1.2.0'
+    testImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
