--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,13 +5,13 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 28
     buildToolsVersion "29.0.3"
 
     defaultConfig {
         applicationId "com.tiendito.swvlmovies"
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
 
@@ -20,6 +20,10 @@ android {
 
     kotlinOptions {
         jvmTarget = "1.8"
+    }
+
+    testOptions.unitTests {
+        includeAndroidResources = true
     }
 
     compileOptions {
@@ -95,6 +99,9 @@ dependencies {
     // optional - Guava support for Room, including Optional and ListenableFuture
     implementation "androidx.room:room-guava:$room_version"
 
+    // Test helpers
+    testImplementation "androidx.room:room-testing:$room_version"
+
     def paging_version = "2.1.2"
 
     implementation "androidx.paging:paging-runtime:$paging_version" // For Kotlin use paging-runtime-ktx
@@ -130,7 +137,7 @@ dependencies {
     def androidXTestExtKotlinRunnerVersion = '1.1.1'
     testImplementation "androidx.test.ext:junit-ktx:$androidXTestExtKotlinRunnerVersion"
 
-    def androidXTestCoreVersion = '1.2.0'
+    def androidXTestCoreVersion = '1.3.0'
     testImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
 
     testImplementation 'junit:junit:4.12'
