--- a/app/build.gradle
+++ b/app/build.gradle
@@ -140,6 +140,13 @@ dependencies {
     def androidXTestCoreVersion = '1.3.0'
     testImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
 
+    def mockitoCoreVersion = '2.25.0'
+    testImplementation "org.mockito:mockito-core:$mockitoCoreVersion"
+/*    def mockitoAllVersion = '1.10.19'
+    testImplementation "org.mockito:mockito-all:$mockitoAllVersion"
+    def mockitoAndroidVersion = '2.25.0'
+    testImplementation "org.mockito:mockito-android:$mockitoAndroidVersion"*/
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
